Additional Header Alignment Fixes

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -17,3 +17,9 @@
     cursor: pointer;
 }
 
+.centerize {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
